--- a/index.html
+++ b/index.html
@@ -1,64 +1,136 @@
-<!DOCTYPE html SYSTEM "about:legacy-compat"> 
-<html dir="ltr" lang="nl-be" class="no-js" prefix="og: http://ogp.me/ns#">
-  <head>
-    <!-- Character encoding -->
-	  <meta charset="UTF-8"> 
-	  <!-- Latest version of rendering engine -->
-	  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <!-- Mobile Viewport -->
-	  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <!-- Most important SEO tag -->
-    <title>HTML5 | Webdesign II | GDM</title>
-    <!-- Other SEO friendly tags -->	
-    <meta name="description" content="Lees hier alles over nieuwe media, html5 en andere ontwikkelingen in webdevelopment en mobile development. De docenten NMD willen graag hun kennis delen met jou!">
-    <meta name="keywords" content="HTML5, JavaScript, jQuery, CSS3">
-    <meta name="author" content="Arteveldehogeschool - Bachelor in de grafische en digitale media | MMP">
-    <meta name="copyright" content="Copyright 2010-17 Arteveldehogeschool. All Rights Reserved.">
-    <!-- OpenGraph -->
-    <meta property="og:type" content="website">
-    <meta property="og:title" content=">HTML5 | Webdesign II | GDM">
-    <meta property="og:description" content="Lees hier alles over nieuwe media, html5 en andere ontwikkelingen in webdevelopment en mobile development. De docenten NMD willen graag hun kennis delen met jou!">
-    <meta property="og:url" content="http://www.gdm.gent/">
-    <meta property="og:site_name" content="GDM.GENT">
-    <meta property="og:image" content="assets/images/ahs.png">
-    <meta property="og:image:width" content="129">
-    <meta property="og:image:height" content="129">
-    <!-- humans.txt -->
-    <link rel="author" type="text/plain" href="/humans.txt">
-     <!-- DNS prefech for CDN -->
-    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
-    <link rel="dns-prefetch" href="//code.jquery.com">
-    <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
-    <!-- Icons -->
-    <!-- http://realfavicongenerator.net/ -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="assets/icons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="assets/icons/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="assets/icons/manifest.json">
-    <link rel="mask-icon" href="assets/icons/safari-pinned-tab.svg" color="#ee9900">
-    <link rel="shortcut icon" href="assets/icons/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="GDM">
-    <meta name="application-name" content="GDM">
-    <meta name="msapplication-config" content="assets/icons/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
-    <!-- Stylesheets: Vendors -->
-    <link rel="stylesheet" media="all" href="vendor/normalize/normalize.css">
-    <!-- Stylesheets: App -->
-    <link rel="stylesheet" media="all" href="css/fonts.css">
-    <link rel="stylesheet" media="all" href="css/typography.css">
-    <link rel="stylesheet" media="all" href="css/main.css">
-    <!-- Modernizr: feature detection -->
-    <script src="vendor/modernizr/modernizr.min.js"></script>
-  </head>
+<!doctype html>
+<html>
 
-  <body>
-    <div class="intro">
-      <h1>GDM - HTML5 Template</h1>
-      <p>We educate future talents in Design for Print and Non-Print, Web- and App Development, Audio and Video Production, 2D- and 3D Animations, Printing and Packaging and the whole Management of those workflows!</p>
-    </div>
-    <!-- Scripts: Vendors -->
-      <!-- For example: jQuery, lodash, handlebars, ... -->
-    <!-- Scripts: App -->
-    <script src="js/main.js"></script>
-  </body>
+<head>
+	<meta charset="UTF-8">
+	<title>WE ARE THE SAME | Home</title>
+
+	<!-- OTHER IMPORTANT SEO TAGS -->
+	<meta name="description" content="Lees hier alles over nieuwe media, html5 en andere ontwikkelingen in webdevelopment en mobile development. De docenten MMP willen graag hun kennis delen met jou!">
+	<meta name="keywords" content="HTML5, JavaScript, jQuery, CSS3">
+	<meta name="author" content="Arteveldehogeschool - Bachelor in de grafische en digitale media | MMP">
+	<meta name="copyright" content="Copyright 2010-14 Arteveldehogeschool. All Rights Reserved.">
+
+	<!-- stijlen: let op! watervalsysteem, de volgorde is dus belangrijk -->
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" media="all" href="styles/vendor/normalize.css" />
+	<link rel="stylesheet" media="all" href="styles/grid.css" />
+	<link rel="stylesheet" media="all" href="styles/nav.css" />
+	<link rel="stylesheet" media="all" href="styles/base.css" />
+
+
+
+</head>
+
+
+<body class="_grid__development">
+
+	<!-- Navigatie -->
+	<div class="grid__wrapper header-wrapper">
+
+		<nav id="main-navigation">
+			<ul>
+				<li>
+					<a href="index.html" title="terug naar de homepage">HOME</a>
+				</li>
+				<li>
+					<a href="portfolio.html" title="ons portfolio">PORTFOLIO</a>
+				</li>
+				<li>
+					<a href="team.html" title="wie zijn we?">ONS TEAM</a>
+				</li>
+				<li>
+					<a href="contact.html" title="laten we elkaar ontmoeten">CONTACT</a>
+				</li>
+			</ul>
+
+		</nav>
+	</div>
+
+
+	<div class="grid__wrapper">
+		<div class="wrapbanner">
+			<h1> WE ARE THE SAME </h1>
+			<img class="banner" src="_img/banner.png" alt="banner">
+		</div>
+	</div>
+
+
+	<div class="grid__wrapper">
+		<div class="grid__container algemene_opmaak_tekst">
+			<div class="grid__row">
+
+				<div class="grid__column-3 grid__offset-1">
+					<h2>WAT ZIJN WE?</h2>
+					We zijn een grafisch bureau gevestigd in het hartje van Schellebelle. WE ARE THE SAME bestaat uit een groep grafische ontwerpers
+					en webdesigners die hun werk elke dag met passie uitvoeren.
+				</div>
+				<div class="grid__column-4">
+					<h2>WAT DOEN WE?</h2>
+					Ons werk is zeer uiteenlopend. Alles wat er zich in de grafische wereld afspeelt, kunnen wij bereiken. We maken websites,
+					we geven boeken, formulieren, uitnodigingen, zelfs het kleinste drukwerk die juiste vormgeving zodat uw product (nog
+					meer) aantrekkelijk wordt.
+				</div>
+				<div class="grid__column-3">
+					<h2>WAAROM WATS?</h2>
+					We zijn een jong, creatief bruisend bureau met zeer veel passie voor ons vak. We gaan graag uitdagingen aan en geven niet
+					snel op, bij WE ARE THE SAME zit je goed!
+				</div>
+			</div>
+			<div class="grid__row">
+				<div class="grid__column-3 grid__offset-1">
+					<h3>HOE ZIET ONZE TOEKOMST ER UIT?</h3>
+					Ook al is dit bureau (nog) niet het grootste in België, onze klantendatabase wordt wekelijks groter.
+				</div>
+				<div class="grid__column-4">
+					<h3>HOE ZIJN WE TOT STAND GEKOMEN?</h3>
+					Alle teamleden hebben elkaar ontmoet op de campus Grafische & Digitale Media op Arteveldehogeschool. Dit bureau is een uitdehandgelopen
+					groepswerk waar alle leden teamlid van waren. Omdat het groepsgevoel zo goed zat, zijn we verder gegaan met elkaar na
+					ons diploma. </div>
+				<div class="grid__column-3">
+					<h3>WAT IS JOUW TOEKOMST MET WATS?</h3>
+					Wanneer u ons contacteerd kunnen we altijd samenzitten om eventuele projecten te bespreken.
+				</div>
+
+			</div>
+			<div class="grid__row">
+
+				<div class="grid__column-7 grid__offset-1">
+					<h3>NAAMVERKLARING</h3>
+					Letterlijk vertaald: WE ZIJN HETZELFDE. Dit heeft goede redenen. De eerste reden is puur toevallig, maar we lijken allemaal
+					op elkaar, waardoor velen denken dat we een familieband hebben, wat niet zo is. De tweede reden gaat vooral over hoe
+					we denken. Wij als grafische vormgevers kijken en denken op een andere manier naar veel dingen. Ook al hebben we onze
+					verschillen, na een sessie brainstormen komt er altijd een geweldig idee.
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+
+
+	<!-- footer -->
+<footer>
+	<div class="grid-wrapper">
+		<div class="grid__container">
+			<div class="grid__row">
+
+				<div class="grid__column-3 text-footer">
+					Joren Verneert © 2017
+				</div>
+
+				<div class=" grid__offset-2 grid__column-7">
+					iconen??
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+	</footer>
+
+
+
+</body>
+
 </html>
