--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
 	<div class="grid__wrapper">
 		<div class="wrapbanner">
 			<h1> WE ARE THE SAME </h1>
-			<img class="banner" src="_img/banner.png" alt="banner">
+			<img class="banner" src="./_img/banner.png" alt="banner">
 		</div>
 	</div>
 
 
 	<div class="grid__wrapper">
-		<div class="grid__container algemene_opmaak_tekst">
-			<div class="grid__row">
+		<div class="grid__container">
+			<div class="grid__row test">
 
-				<div class="grid__column-3 grid__offset-1">
+				<div class="grid__column-3 grid__offset-1 witte_tekst">
 					<h2>WAT ZIJN WE?</h2>
 					We zijn een grafisch bureau gevestigd in het hartje van Schellebelle. WE ARE THE SAME bestaat uit een groep grafische ontwerpers
 					en webdesigners die hun werk elke dag met passie uitvoeren.
