--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<div class="grid__wrapper">
 		<div class="wrapbanner">
 			<h1> WE ARE THE SAME </h1>
-			<img class="banner" src="./_img/banner.png" alt="banner">
+			<img class="banner" src="img/banner.png" alt="banner">
 		</div>
 	</div>
 
