--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,8 @@
 <div class="grid__wrapper">
 		<div class="wraplogo" >
 			<h1> CONTACT </h1>
-			<a href="index.html"><img class="logo" src="_img/logo.png" alt="logo"></a>
-			<!--img class="vlek" src="_img/vlek.png" alt="vlek"-->
+			<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
+			<!--img class="vlek" src="img/vlek.png" alt="vlek"-->
 		</div>
 	</div>
 
