--- a/portfolio.html
+++ b/portfolio.html
@@ -46,8 +46,8 @@
 <div class="grid__wrapper">
 		<div class="wraplogo" >
 			<h1> PORTFOLIO </h1>
-			<a href="index.html"><img class="logo" src="_img/logo.png" alt="logo"></a>
-			<!--img class="vlek" src="_img/vlek.png" alt="vlek"-->
+			<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
+			<!--img class="vlek" src="img/vlek.png" alt="vlek"-->
 		</div>
 	</div>
 
@@ -55,10 +55,10 @@
 
 </div class="grid__container">
 			<div class="grid__column-5 grid__offset-2">
-				<img class="vespa_1" src="_img/vespa_1.png" alt="technische fiche vespa 125 GTR"> </div>
+				<img class="vespa_1" src="img/vespa_1.png" alt="technische fiche vespa 125 GTR"> </div>
 			<div class="grid__column-3">
-				<img class="vijftig_1" src="_img/vijftig_1.png" alt="technische fiche vespa 125 GTR"> </div>
+				<img class="vijftig_1" src="img/vijftig_1.png" alt="technische fiche vespa 125 GTR"> </div>
 			<div class="grid__column-2 grid__offset-2">
-				<img class="eureka" src="_img/eureka.png" alt="steekkaarten logo voor doosje Eureka"> </div>
+				<img class="eureka" src="img/eureka.png" alt="steekkaarten logo voor doosje Eureka"> </div>
 			<div class="grid__column-3">
-				<img class="elien_jonas" src="_img/elien_jonas.png" alt="cadeau kader"> </div>
+				<img class="elien_jonas" src="img/elien_jonas.png" alt="cadeau kader"> </div>
