--- a/team.html
+++ b/team.html
@@ -45,8 +45,8 @@
 <div class="grid__wrapper">
 		<div class="wraplogo" >
 			<h1> ONS TEAM </h1>
-			<a href="index.html"><img class="logo" src="_img/logo.png" alt="logo"></a>
-			<!--img class="vlek" src="_img/vlek.png" alt="vlek"-->
+			<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
+			<!--img class="vlek" src="img/vlek.png" alt="vlek"-->
 		</div>
 	</div>
 
@@ -56,19 +56,19 @@
 </div class="grid__container">
 		
 			<div class="grid__column-3 grid__offset-2">
-				<img class="leden" src="_img/joren.png" alt="joren"> </div>
+				<img class="leden" src="img/joren.png" alt="joren"> </div>
 			<div class="grid__column-1 bovennamen"> Joren </div>
 			<div class="grid__column-1 ondernamen"> Annie </div>
 			<div class="grid__column-3">
-				<img class="leden" src="_img/annie.png" alt="annie"></div>
+				<img class="leden" src="img/annie.png" alt="annie"></div>
 			<div class="grid__column-3 grid__offset-2">
-				<img class="leden" src="_img/bertel.png" alt="bertel"></div>
+				<img class="leden" src="img/bertel.png" alt="bertel"></div>
 			<div class="grid__column-1 bovennamen"> Bertel </div>
 			<div class="grid__column-1 ondernamen"> Jamal </div>	
 			<div class="grid__column-3">
-				<img class="leden" src="_img/jamal.png" alt="jamal"></div>
+				<img class="leden" src="img/jamal.png" alt="jamal"></div>
 			<div class="grid__column-3 grid__offset-2">
-				<img class="leden" src="_img/tonia.png" alt="tonia"></div>
+				<img class="leden" src="img/tonia.png" alt="tonia"></div>
 			<div class="grid__column-1 bovennamen"> Tonia </div>
 			<a href="contact.html"><div class="grid__column-3 grid__offset-1 leden aanwerving">
 				Misschien word jij wel onze nieuwe aanwinst?
