--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
 	<div class="grid__wrapper">
 		<div class="grid__container">
-			<div class="grid__row test">
+			<div class="grid__row blauw_vlak">
 
-				<div class="grid__column-3 grid__offset-1 witte_tekst">
+				<div class="grid__column-3 grid__offset-1">
 					<h2>WAT ZIJN WE?</h2>
 					We zijn een grafisch bureau gevestigd in het hartje van Schellebelle. WE ARE THE SAME bestaat uit een groep grafische ontwerpers
 					en webdesigners die hun werk elke dag met passie uitvoeren.
@@ -94,7 +94,6 @@
 
 			</div>
 			<div class="grid__row">
-
 				<div class="grid__column-7 grid__offset-1">
 					<h3>NAAMVERKLARING</h3>
 					Letterlijk vertaald: WE ZIJN HETZELFDE. Dit heeft goede redenen. De eerste reden is puur toevallig, maar we lijken allemaal
@@ -110,22 +109,22 @@
 
 
 	<!-- footer -->
-<footer>
-	<div class="grid-wrapper">
-		<div class="grid__container">
-			<div class="grid__row">
+	<footer>
+		<div class="grid-wrapper">
+			<div class="grid__container">
+				<div class="grid__row">
 
-				<div class="grid__column-3 text-footer">
-					Joren Verneert © 2017
+					<div class="grid__column-3 text-footer">
+						Joren Verneert © 2017
+					</div>
+
+					<div class=" grid__offset-2 grid__column-7">
+						iconen??
+					</div>
 				</div>
 
-				<div class=" grid__offset-2 grid__column-7">
-					iconen??
-				</div>
 			</div>
-
 		</div>
-	</div>
 
 	</footer>
 
