--- a/contact.html
+++ b/contact.html
@@ -1,65 +1,87 @@
 <!doctype html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<title>WE ARE THE SAME | Contact</title>
 
-	<!-- OTHER IMPORTANT SEO TAGS -->	
+	<!-- OTHER IMPORTANT SEO TAGS -->
 	<meta name="description" content="Lees hier alles over nieuwe media, html5 en andere ontwikkelingen in webdevelopment en mobile development. De docenten MMP willen graag hun kennis delen met jou!">
 	<meta name="keywords" content="HTML5, JavaScript, jQuery, CSS3">
 	<meta name="author" content="Arteveldehogeschool - Bachelor in de grafische en digitale media | MMP">
 	<meta name="copyright" content="Copyright 2010-14 Arteveldehogeschool. All Rights Reserved.">
-	
+
 	<!-- stijlen: let op! watervalsysteem, de volgorde is dus belangrijk -->
-	<link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'> 
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" media="all" href="styles/vendor/normalize.css" />
 	<link rel="stylesheet" media="all" href="styles/grid.css" />
 	<link rel="stylesheet" media="all" href="styles/nav.css" />
 	<link rel="stylesheet" media="all" href="styles/base.css" />
 </head>
 
-<body class="_grid__development" >
-<!-- Navigatie -->
+<body class="_grid__development">
+	<!-- Navigatie -->
 	<div class="grid__wrapper header-wrapper">
 
-			<nav id="main-navigation">
-						<ul>
-							<li>
-								<a href="index.html" title="terug naar de homepage">HOME</a>
-							</li>
-							<li>
-								<a href="portfolio.html" title="ons portfolio">PORTFOLIO</a>
-							</li>
-							<li>
-								<a href="team.html" title="wie zijn we?">ONS TEAM</a>
-							</li>
-							<li>
-								<a href="contact.html" title="laten we elkaar ontmoeten">CONTACT</a>
-							</li>
-						</ul>
-					</nav>	
- 		</div>
+		<nav id="main-navigation">
+			<ul>
+				<li>
+					<a href="index.html" title="terug naar de homepage">HOME</a>
+				</li>
+				<li>
+					<a href="portfolio.html" title="ons portfolio">PORTFOLIO</a>
+				</li>
+				<li>
+					<a href="team.html" title="wie zijn we?">ONS TEAM</a>
+				</li>
+				<li>
+					<a href="contact.html" title="laten we elkaar ontmoeten">CONTACT</a>
+				</li>
+			</ul>
+		</nav>
+	</div>
 
-<!-- Hoofding -->
+	<!-- Hoofding -->
 
-<div class="grid__wrapper">
-		<div class="wraplogo" >
+	<div class="grid__wrapper">
+		<div class="wraplogo">
 			<h1> CONTACT </h1>
 			<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
 			<!--img class="vlek" src="img/vlek.png" alt="vlek"-->
 		</div>
 	</div>
 
-<!-- contactformulier -->
+	<!-- contactformulier -->
 
-<div class="formulier grid__column-4 grid__offset-2">
-                <p>Naam</p>
-				<textarea name="naam"></textarea>
-				<p>Voornaam</p>
-                <textarea name="voornaam"> </textarea>
-				<p>E-mailadres</p>
-            	<textarea name="e-mail"> </textarea>
-				<p>Bericht</p>
-                <textarea name="bericht"> </textarea>
-            
-    </div>
+	<div class="grid__container">
+
+		<div class="grid__column-4 grid__offset-2">
+
+			<h3 class="contact_tekstgegevens">HEBT U EEN VRAAG? CONTACTEER ONS!</h3>
+
+			<div class="contactformulier">
+				<form>
+					Naam
+					<br><input type="text">
+					<br>Voornaam
+					<br><input type="text">
+					<br>E-mailadres
+					<br><input type="text">
+					<br>Uw bericht
+					<br><input class="bericht" type="text">
+				</form>
+			</div>
+		</div>
+
+		<div class="grid__column-4 grid__offset-1">
+			<h2 class="contact_tekstgegevens">
+			WE ARE THE SAME
+			<br>HEUVEL 32
+			<br>9260 SCHELLEBELLE
+			<br>BELGIUM/BELGIË
+			<br>+32 473 29 97 59
+			<br>09 366 17 50
+			</h2>
+		</div>
+		
+	</div>
