--- a/team.html
+++ b/team.html
@@ -1,75 +1,79 @@
 <!doctype html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<title>WE ARE THE SAME | Ons Team</title>
 
-	<!-- OTHER IMPORTANT SEO TAGS -->	
+	<!-- OTHER IMPORTANT SEO TAGS -->
 	<meta name="description" content="Lees hier alles over nieuwe media, html5 en andere ontwikkelingen in webdevelopment en mobile development. De docenten MMP willen graag hun kennis delen met jou!">
 	<meta name="keywords" content="HTML5, JavaScript, jQuery, CSS3">
 	<meta name="author" content="Arteveldehogeschool - Bachelor in de grafische en digitale media | MMP">
 	<meta name="copyright" content="Copyright 2010-14 Arteveldehogeschool. All Rights Reserved.">
-	
+
 	<!-- stijlen: let op! watervalsysteem, de volgorde is dus belangrijk -->
-	<link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'> 
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" media="all" href="styles/vendor/normalize.css" />
 	<link rel="stylesheet" media="all" href="styles/grid.css" />
 	<link rel="stylesheet" media="all" href="styles/nav.css" />
 	<link rel="stylesheet" media="all" href="styles/base.css" />
 </head>
 
-<body class="_grid__development" >
-<!-- Navigatie -->
+<body class="_grid__development">
+	<!-- Navigatie -->
 	<div class="grid__wrapper header-wrapper">
 
-			<nav id="main-navigation">
-						<ul>
-							<li>
-								<a href="index.html" title="terug naar de homepage">HOME</a>
-							</li>
-							<li>
-								<a href="portfolio.html" title="ons portfolio">PORTFOLIO</a>
-							</li>
-							<li>
-								<a href="team.html" title="wie zijn we?">ONS TEAM</a>
-							</li>
-							<li>
-								<a href="contact.html" title="laten we elkaar ontmoeten">CONTACT</a>
-							</li>
-						</ul>
-					</nav>	
- 		</div>
+		<nav id="main-navigation">
+			<ul>
+				<li>
+					<a href="index.html" title="terug naar de homepage">HOME</a>
+				</li>
+				<li>
+					<a href="portfolio.html" title="ons portfolio">PORTFOLIO</a>
+				</li>
+				<li>
+					<a href="team.html" title="wie zijn we?">ONS TEAM</a>
+				</li>
+				<li>
+					<a href="contact.html" title="laten we elkaar ontmoeten">CONTACT</a>
+				</li>
+			</ul>
+		</nav>
+	</div>
 
-<!-- Hoofding -->
+	<!-- Hoofding -->
 
-<div class="grid__wrapper">
-		<div class="wraplogo" >
+	<div class="grid__wrapper">
+		<div class="wraplogo">
 			<h1> ONS TEAM </h1>
 			<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
 			<!--img class="vlek" src="img/vlek.png" alt="vlek"-->
 		</div>
 	</div>
 
-<!-- teamleden -->
+	<!-- teamleden -->
 
 
-</div class="grid__container">
-		
-			<div class="grid__column-3 grid__offset-2">
-				<img class="leden" src="img/joren.png" alt="joren"> </div>
-			<div class="grid__column-1 bovennamen"> Joren </div>
-			<div class="grid__column-1 ondernamen"> Annie </div>
-			<div class="grid__column-3">
-				<img class="leden" src="img/annie.png" alt="annie"></div>
-			<div class="grid__column-3 grid__offset-2">
-				<img class="leden" src="img/bertel.png" alt="bertel"></div>
-			<div class="grid__column-1 bovennamen"> Bertel </div>
-			<div class="grid__column-1 ondernamen"> Jamal </div>	
-			<div class="grid__column-3">
-				<img class="leden" src="img/jamal.png" alt="jamal"></div>
-			<div class="grid__column-3 grid__offset-2">
-				<img class="leden" src="img/tonia.png" alt="tonia"></div>
-			<div class="grid__column-1 bovennamen"> Tonia </div>
-			<a href="contact.html"><div class="grid__column-3 grid__offset-1 leden aanwerving">
+	<div class="grid__container">
+
+		<div class="grid__column-3 grid__offset-2">
+			<img class="leden" src="img/joren.png" alt="joren"> </div>
+		<div class="grid__column-1 bovennamen"> Joren </div>
+		<div class="grid__column-1 ondernamen"> Annie </div>
+		<div class="grid__column-3">
+			<img class="leden" src="img/annie.png" alt="annie"></div>
+		<div class="grid__column-3 grid__offset-2">
+			<img class="leden" src="img/bertel.png" alt="bertel"></div>
+		<div class="grid__column-1 bovennamen"> Bertel </div>
+		<div class="grid__column-1 ondernamen"> Jamal </div>
+		<div class="grid__column-3">
+			<img class="leden" src="img/jamal.png" alt="jamal"></div>
+		<div class="grid__column-3 grid__offset-2">
+			<img class="leden" src="img/tonia.png" alt="tonia"></div>
+		<div class="grid__column-1 bovennamen"> Tonia </div>
+		<a href="contact.html">
+			<div class="grid__column-3 grid__offset-1 leden aanwerving">
 				Misschien word jij wel onze nieuwe aanwinst?
-			</div></a>
+			</div>
+		</a>
+	</div>
