--- a/contact.html
+++ b/contact.html
@@ -26,16 +26,16 @@
 		<nav id="main-navigation">
 			<ul>
 				<li>
-					<a href="index.html" title="terug naar de homepage">HOME</a>
+					<a href="index.html" title="Terug naar de homepage">HOME</a>
 				</li>
 				<li>
-					<a href="portfolio.html" title="ons portfolio">PORTFOLIO</a>
+					<a href="portfolio.html" title="Bekijk ons portfolio">PORTFOLIO</a>
 				</li>
 				<li>
-					<a href="team.html" title="wie zijn we?">ONS TEAM</a>
+					<a href="team.html" title="Wie zijn we?">ONS TEAM</a>
 				</li>
 				<li>
-					<a href="contact.html" title="laten we elkaar ontmoeten">CONTACT</a>
+					<a href="contact.html" title="Do you want a date with us?">CONTACT</a>
 				</li>
 			</ul>
 		</nav>
@@ -47,7 +47,6 @@
 		<div class="wraplogo">
 			<h1> CONTACT </h1>
 			<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
-			<!--img class="vlek" src="img/vlek.png" alt="vlek"-->
 		</div>
 	</div>
 
@@ -57,7 +56,7 @@
 
 		<div class="grid__column-4 grid__offset-2">
 
-			<h3 class="contact_tekstgegevens">HEBT U EEN VRAAG? CONTACTEER ONS!</h3>
+			<h3 class="contact_tekstgegevens">HEBT U EEN VRAAG? <br>CONTACTEER ONS!</h3>
 
 			<div class="contactformulier">
 				<form>
@@ -75,13 +74,13 @@
 
 		<div class="grid__column-4 grid__offset-1">
 			<h2 class="contact_tekstgegevens">
-			WE ARE THE SAME
-			<br>HEUVEL 32
-			<br>9260 SCHELLEBELLE
-			<br>BELGIUM/BELGIË
-			<br>+32 473 29 97 59
-			<br>09 366 17 50
+				WE ARE THE SAME
+				<br>HEUVEL 32
+				<br>9260 SCHELLEBELLE
+				<br>BELGIUM/BELGIË
+				<br>+32 473 29 97 59
+				<br>09 366 17 50
 			</h2>
 		</div>
-		
+
 	</div>
