--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 	<link rel="stylesheet" media="all" href="styles/grid.css" />
 	<link rel="stylesheet" media="all" href="styles/nav.css" />
 	<link rel="stylesheet" media="all" href="styles/base.css" />
-
-
-
+	<link rel="stylesheet" media="all" href="css/font-awesome.css" type='text/css' />
 </head>
 
 
@@ -31,16 +29,16 @@
 		<nav id="main-navigation">
 			<ul>
 				<li>
-					<a href="index.html" title="terug naar de homepage">HOME</a>
+					<a href="index.html" title="Terug naar de homepagina">HOME</a>
 				</li>
 				<li>
-					<a href="portfolio.html" title="ons portfolio">PORTFOLIO</a>
+					<a href="portfolio.html" title="Bekijk Bekijk ons portfolio">PORTFOLIO</a>
 				</li>
 				<li>
-					<a href="team.html" title="wie zijn we?">ONS TEAM</a>
+					<a href="team.html" title="Wie zijn we?">ONS TEAM</a>
 				</li>
 				<li>
-					<a href="contact.html" title="laten we elkaar ontmoeten">CONTACT</a>
+					<a href="contact.html" title="Do you want a date with us?">CONTACT</a>
 				</li>
 			</ul>
 
@@ -101,6 +99,9 @@
 					we denken. Wij als grafische vormgevers kijken en denken op een andere manier naar veel dingen. Ook al hebben we onze
 					verschillen, na een sessie brainstormen komt er altijd een geweldig idee.
 				</div>
+				<div class="grid__column-3">
+					<img class="werkplek" src="img/werkplek.png" alt="werkplek">
+				</div>
 			</div>
 
 		</div>
@@ -110,22 +111,23 @@
 
 	<!-- footer -->
 	<footer>
-		<div class="grid-wrapper">
+		<div class="grid-wrapper footer-wrapper">
 			<div class="grid__container">
 				<div class="grid__row">
-
-					<div class="grid__column-3 text-footer">
+					<div class="grid__column-4 grid__offset-1 text-footer">
 						Joren Verneert © 2017
 					</div>
-
-					<div class=" grid__offset-2 grid__column-7">
-						iconen??
+					<div class="grid__column-7">
+						<a href="https://www.facebook.com/verneert.j">
+							<i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+						</a>
+						<a href="https://www.instagram.com/joren.verneert/">
+							<i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+						</a>
 					</div>
 				</div>
-
 			</div>
 		</div>
-
 	</footer>
 
 
