--- a/portfolio.html
+++ b/portfolio.html
@@ -1,64 +1,76 @@
 <!doctype html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<title>WE ARE THE SAME | Portfolio</title>
 
-	<!-- OTHER IMPORTANT SEO TAGS -->	
+	<!-- OTHER IMPORTANT SEO TAGS -->
 	<meta name="description" content="Lees hier alles over nieuwe media, html5 en andere ontwikkelingen in webdevelopment en mobile development. De docenten MMP willen graag hun kennis delen met jou!">
 	<meta name="keywords" content="HTML5, JavaScript, jQuery, CSS3">
 	<meta name="author" content="Arteveldehogeschool - Bachelor in de grafische en digitale media | MMP">
 	<meta name="copyright" content="Copyright 2010-14 Arteveldehogeschool. All Rights Reserved.">
-	
+
 	<!-- stijlen: let op! watervalsysteem, de volgorde is dus belangrijk -->
-	<link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'> 
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" media="all" href="styles/vendor/normalize.css" />
 	<link rel="stylesheet" media="all" href="styles/grid.css" />
 	<link rel="stylesheet" media="all" href="styles/nav.css" />
 	<link rel="stylesheet" media="all" href="styles/base.css" />
+	<link rel="stylesheet" media="all" href="css/font-awesome.css" type='text/css' />
 </head>
 
-<body class="_grid__development" >
-<!-- Navigatie -->
+<body class="_grid__development">
+	<!-- Navigatie -->
 	<div class="grid__wrapper header-wrapper">
 
-			<nav id="main-navigation">
-						<ul>
-							<li>
-								<a href="index.html" title="terug naar de homepage">HOME</a>
-							</li>
-							<li>
-								<a href="portfolio.html" title="ons portfolio">PORTFOLIO</a>
-							</li>
-							<li>
-								<a href="team.html" title="wie zijn we?">ONS TEAM</a>
-							</li>
-							<li>
-								<a href="contact.html" title="laten we elkaar ontmoeten">CONTACT</a>
-							</li>
-						</ul>
-					</nav>	
- 		</div>
-    
+		<nav id="main-navigation">
+			<ul>
+				<li>
+					<a href="index.html" title="Terug naar de homepage">HOME</a>
+				</li>
+				<li>
+					<a href="portfolio.html" title="Bekijk ons portfolio">PORTFOLIO</a>
+				</li>
+				<li>
+					<a href="team.html" title="Wie zijn we?">ONS TEAM</a>
+				</li>
+				<li>
+					<a href="contact.html" title="Do you want a date with us?">CONTACT</a>
+				</li>
+			</ul>
+		</nav>
+	</div>
 
-<!-- Hoofding -->
 
-<div class="grid__wrapper">
-		<div class="wraplogo" >
+	<!-- Hoofding -->
+
+	<div class="grid__wrapper">
+		<div class="wraplogo">
 			<h1> PORTFOLIO </h1>
 			<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
-			<!--img class="vlek" src="img/vlek.png" alt="vlek"-->
 		</div>
 	</div>
 
-<!-- projecten -->
+	<!-- projecten -->
 
-</div class="grid__container">
-			<div class="grid__column-5 grid__offset-2">
-				<img class="vespa_1" src="img/vespa_1.png" alt="technische fiche vespa 125 GTR"> </div>
+	<div class="grid__container">
+		<div class="grid__row">
+			<div class="grid__column-3 grid__offset-1">
+				<img class="standaard_foto" src="img/eureka.png" alt="steekkaarten eureka">
+			</div>
+			<div class="grid__column-4">
+				<img class="standaard_foto" src="img/vespa_1.png" alt="technische fischa vespa 125gtr">
+			</div>
 			<div class="grid__column-3">
-				<img class="vijftig_1" src="img/vijftig_1.png" alt="technische fiche vespa 125 GTR"> </div>
-			<div class="grid__column-2 grid__offset-2">
-				<img class="eureka" src="img/eureka.png" alt="steekkaarten logo voor doosje Eureka"> </div>
-			<div class="grid__column-3">
-				<img class="elien_jonas" src="img/elien_jonas.png" alt="cadeau kader"> </div>
+				<img class="standaard_foto" src="img/logo_cd.png" alt="captured dreams">
+			</div>
+		</div>
+		<div class="grid__row">
+			<div class="grid__column-3 grid__offset-1">
+				<img class="standaard_foto" src="img/elien_jonas.png" alt="kader cadeau">
+			</div>
+		</div>
+	</div>
+
+</body>
