--- a/team.html
+++ b/team.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" media="all" href="styles/grid.css" />
 	<link rel="stylesheet" media="all" href="styles/nav.css" />
 	<link rel="stylesheet" media="all" href="styles/base.css" />
+	<link rel="stylesheet" media="all" href="css/font-awesome.css" type='text/css' />
 </head>
 
 <body class="_grid__development">
@@ -26,16 +27,16 @@
 		<nav id="main-navigation">
 			<ul>
 				<li>
-					<a href="index.html" title="terug naar de homepage">HOME</a>
+					<a href="index.html" title="Terug naar de homepage">HOME</a>
 				</li>
 				<li>
-					<a href="portfolio.html" title="ons portfolio">PORTFOLIO</a>
+					<a href="portfolio.html" title="Bekijk ons portfolio">PORTFOLIO</a>
 				</li>
 				<li>
-					<a href="team.html" title="wie zijn we?">ONS TEAM</a>
+					<a href="team.html" title="Wie zijn we?">ONS TEAM</a>
 				</li>
 				<li>
-					<a href="contact.html" title="laten we elkaar ontmoeten">CONTACT</a>
+					<a href="contact.html" title="Do you want a date with us?">CONTACT</a>
 				</li>
 			</ul>
 		</nav>
@@ -47,7 +48,6 @@
 		<div class="wraplogo">
 			<h1> ONS TEAM </h1>
 			<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
-			<!--img class="vlek" src="img/vlek.png" alt="vlek"-->
 		</div>
 	</div>
 
@@ -56,24 +56,50 @@
 
 	<div class="grid__container">
 
-		<div class="grid__column-3 grid__offset-2">
-			<img class="leden" src="img/joren.png" alt="joren"> </div>
-		<div class="grid__column-1 bovennamen"> Joren </div>
-		<div class="grid__column-1 ondernamen"> Annie </div>
-		<div class="grid__column-3">
-			<img class="leden" src="img/annie.png" alt="annie"></div>
-		<div class="grid__column-3 grid__offset-2">
-			<img class="leden" src="img/bertel.png" alt="bertel"></div>
-		<div class="grid__column-1 bovennamen"> Bertel </div>
-		<div class="grid__column-1 ondernamen"> Jamal </div>
-		<div class="grid__column-3">
-			<img class="leden" src="img/jamal.png" alt="jamal"></div>
-		<div class="grid__column-3 grid__offset-2">
-			<img class="leden" src="img/tonia.png" alt="tonia"></div>
-		<div class="grid__column-1 bovennamen"> Tonia </div>
-		<a href="contact.html">
-			<div class="grid__column-3 grid__offset-1 leden aanwerving">
-				Misschien word jij wel onze nieuwe aanwinst?
+		<div class="grid__row">
+
+			<div class="grid__column-3 grid__offset-2">
+				<a href="joren.html">
+					<img class="standaard_foto" src="img/joren.png" alt="joren">
+				</a>
 			</div>
-		</a>
+			<div class="grid__column-1 bovennamen"> Joren </div>
+			<div class="grid__column-1 ondernamen"> Lara </div>
+			<div class="grid__column-3">
+				<a href="lara.html">
+					<img class="standaard_foto" src="img/lara.png" alt="lara">
+				</a>
+			</div>
+		</div>
+		<div class="grid__row">
+			<div class="grid__column-3 grid__offset-2">
+				<a href="bertel.html">
+					<img class="standaard_foto" src="img/bertel.png" alt="bertel">
+				</a>
+			</div>
+			<div class="grid__column-1 bovennamen"> Bertel </div>
+			<div class="grid__column-1 ondernamen"> Jamal </div>
+			<div class="grid__column-3">
+				<a href="jamal.html">
+					<img class="standaard_foto" src="img/jamal.png" alt="jamal">
+				</a>
+			</div>
+		</div>
+		<div class="grid__row">
+			<div class="grid__column-3 grid__offset-2">
+				<a href="tonia.html">
+					<img class="standaard_foto" src="img/tonia.png" alt="tonia">
+				</a>
+			</div>
+			<div class="grid__column-1 bovennamen"> Tonia </div>
+			<a href="contact.html">
+				<div class="grid__column-3 grid__offset-1 aanwerving">
+					Misschien word jij wel onze nieuwe aanwinst?
+				</div>
+			</a>
+		</div>
 	</div>
+
+
+
+</body>
