--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
 		<div class="grid-wrapper footer-wrapper">
 			<div class="grid__container">
 				<div class="grid__row">
-					<div class="grid__column-4 grid__offset-1 text-footer">
+					<div class="grid__column-5 text-footer">
 						Joren Verneert © 2017
 					</div>
-					<div class="grid__column-7">
+					<div class="grid__column-4">
 						<a href="https://www.facebook.com/verneert.j">
 							<i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
 						</a>
@@ -125,13 +125,16 @@
 							<i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
 						</a>
 					</div>
+					<div class="grid__column-3 text-footer adres_footer">
+						WE ARE THE SAME
+						<br>Heuvel 32
+						<br>9260 Schellebelle
+					</div>
 				</div>
 			</div>
 		</div>
 	</footer>
-
-
-
+	
 </body>
 
 </html>
