--- a/joren.html
+++ b/joren.html
@@ -48,7 +48,7 @@
     <div class="grid__wrapper">
         <div class="wraplogo_2 wraplogo">
             <h1> JOREN </h1>
-            <a href="index.html"><img class="logo kleiner_logo" src="img/logo.png" alt="logo"></a>
+            <img class="logo kleiner_logo" src="img/logo.png" alt="logo">
         </div>
     </div>
 
