--- a/team.html
+++ b/team.html
@@ -47,7 +47,7 @@
 	<div class="grid__wrapper">
 		<div class="wraplogo">
 			<h1> ONS TEAM </h1>
-			<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
+			<img class="logo" src="img/logo.png" alt="logo">
 		</div>
 	</div>
 
