--- a/bertel.html
+++ b/bertel.html
@@ -47,7 +47,7 @@
     <div class="grid__wrapper">
         <div class="wraplogo_2 wraplogo">
             <h1> BERTEL </h1>
-            <a href="index.html"><img class="logo kleiner_logo" src="img/logo.png" alt="logo"></a>
+            <img class="logo kleiner_logo" src="img/logo.png" alt="logo">
         </div>
     </div>
 
