--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 	<div class="grid__wrapper">
 		<div class="wraplogo">
 			<h1> CONTACT </h1>
-			<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
+			<img class="logo" src="img/logo.png" alt="logo">
 		</div>
 	</div>
 
@@ -82,5 +82,17 @@
 				<br>09 366 17 50
 			</h2>
 		</div>
+		<div class="grid__column-3 grid__offset-1">
+			<div class="portfolio_wraper">
+					<div class="overlayer">
+						<h4>Bekijk ons locatie op Google maps</h4>
+					</div>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2510.518608131806!2d3.9242340157516207!3d51.006567279555995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c39eca2adb816b%3A0x268f0f5ee74c8c6b!2sHeuvel+32%2C+9260+Wichelen!5e0!3m2!1snl!2sbe!4v1495022524393">
+			</iframe>
+				</div>
+			
+		</div>
+	</div>
+	</a>
 
 	</div>
