--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
 	<div class="grid__wrapper">
 		<div class="wraplogo">
 			<h1> PORTFOLIO </h1>
-			<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
+			<img class="logo" src="img/logo.png" alt="logo">
 		</div>
 	</div>
 
@@ -57,20 +57,91 @@
 	<div class="grid__container">
 		<div class="grid__row">
 			<div class="grid__column-3 grid__offset-1">
-				<img class="standaard_foto" src="img/eureka.png" alt="steekkaarten eureka">
+				<div class="portfolio_wraper">
+					<div class="overlayer">
+						<h4>februari 2017</h4>
+					</div>
+					<img class="standaard_foto" src="img/eureka.png" alt="steekkaarten eureka">
+				</div>
 			</div>
 			<div class="grid__column-4">
-				<img class="standaard_foto" src="img/vespa_1.png" alt="technische fischa vespa 125gtr">
+				<div class="portfolio_wraper">
+					<div class="overlayer">
+						<h4>maart 2017</h4>
+					</div>
+					<img class="standaard_foto" src="img/vespa.png" alt="technische fischa vespa 125gtr">
+				</div>
 			</div>
 			<div class="grid__column-3">
-				<img class="standaard_foto" src="img/logo_cd.png" alt="captured dreams">
+				<div class="portfolio_wraper">
+					<div class="overlayer">
+						<h4>januari 2017</h4>
+					</div>
+					<img class="standaard_foto" src="img/cd.png" alt="captured dreams">
+				</div>
 			</div>
 		</div>
 		<div class="grid__row">
 			<div class="grid__column-3 grid__offset-1">
-				<img class="standaard_foto" src="img/elien_jonas.png" alt="kader cadeau">
+				<div class="portfolio_wraper">
+					<div class="overlayer">
+						<h4>april 2017</h4>
+					</div>
+					<img class="standaard_foto" src="img/kleurlandschap.png" alt="kleurenlandschap aquarel">
+				</div>
+			</div>
+			<div class="grid__column-4">
+				<div class="portfolio_wraper">
+					<div class="overlayer">
+						<h4>april 2017</h4>
+					</div>
+					<img class="standaard_foto" src="img/rhea_macbook.png" alt="youtubekanaal rhea vermei">
+				</div>
+			</div>
+			<div class="grid__column-3">
+				<div class="portfolio_wraper">
+					<div class="overlayer">
+						<h4>maart 2017</h4>
+					</div>
+					<img class="standaard_foto" src="img/uitnodiging_50.png" alt="Uitnodiging 5O jaar Filip">
+				</div>
 			</div>
 		</div>
-	</div>
+		<div class="grid__row">
+			<div class="grid__column-3 grid__offset-1">
+				<div class="portfolio_wraper">
+					<div class="overlayer">
+						<h4>april 2017</h4>
+					</div>
+					<img class="standaard_foto" src="img/memory.png" alt="memry spel zeedieren">
+				</div>
+			</div>
+			<div class="grid__column-4">
+				<div class="portfolio_wraper">
+					<div class="overlayer">
+						<h4>maart 2017</h4>
+					</div>
+					<img class="standaard_foto" src="img/devaddere.png" alt="devaddere boekhouding">
+				</div>
+			</div>
+			<div class="grid__column-3">
+				<div class="portfolio_wraper">
+					<div class="overlayer">
+						<h4>april 2017</h4>
+					</div>
+					<img class="standaard_foto" src="img/z-w_landschap.png" alt="zwart-wit landschap aquarel">
+				</div>
+			</div>
+		</div>
+		<div class="grid__row">
+			<div class="grid__column-3 grid__offset-1">
+				<div class="portfolio_wraper">
+					<div class="overlayer">
+						<h4>maart 2017</h4>
+					</div>
+					<img class="standaard_foto" src="img/elien_jonas.png" alt="kader cadeau">
+				</div>
+			</div>
+		</div>
 
 </body>
