--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
 					<div class="overlayer">
 						<h4>februari 2017</h4>
 					</div>
-					<img class="standaard_foto" src="img/eureka.png" alt="steekkaarten eureka">
+					<img class="standaard_foto" src="img/steekkaarten.png" alt="steekkaarten eureka">
 				</div>
 			</div>
 			<div class="grid__column-4">
