--- a/bertel.html
+++ b/bertel.html
@@ -71,7 +71,7 @@
                 <p>De Vos Bertel
                     <br>20 jaar
                     <br>Wichelen
-                    <br>Webdeisgner
+                    <br>Webdesigner
                     <br>Grafische & Digitale Media, Arteveldehogeschool
                 </p>
             </div>
