--- a/team.html
+++ b/team.html
@@ -92,13 +92,14 @@
 				</a>
 			</div>
 			<div class="grid__column-1 bovennamen"> Tonia </div>
-			<a href="contact.html">
-				<div class="grid__column-3 grid__offset-1 aanwerving">
-					Misschien word jij wel onze nieuwe aanwinst?
+			<div class="grid__column-3 grid__offset-1">
+				<div class="portfolio_wraper">
+					<a href="contact.html">
+						<img class="standaard_foto" src="img/blauw_vlak.png" alt="jamal"> Misschien word jij wel onze nieuwe aanwinst?
+					</a>
 				</div>
-			</a>
+			</div>
 		</div>
-	</div>
 
 
 
