--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 	<!-- contactformulier -->
 
 	<div class="grid__container">
-
+		<div class="grid__row">
 		<div class="grid__column-4 grid__offset-2">
 
 			<h3 class="contact_tekstgegevens">HEBT U EEN VRAAG? <br>CONTACTEER ONS!</h3>
@@ -83,10 +83,17 @@
 			</h2>
 		</div>
 		<div class="grid__column-3 grid__offset-1">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2510.518608131806!2d3.9242340157516207!3d51.006567279555995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c39eca2adb816b%3A0x268f0f5ee74c8c6b!2sHeuvel+32%2C+9260+Wichelen!5e0!3m2!1snl!2sbe!4v1495022524393">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2510.518608131806!2d3.9242340157516207!3d51.006567279555995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c39eca2adb816b%3A0x268f0f5ee74c8c6b!2sHeuvel+32%2C+9260+Wichelen!5e0!3m2!1snl!2sbe!4v1495022524393">
 			</iframe>
+
 		</div>
-	</div>
-	</a>
+		</div>
+		<div class="grid__row">
+			<div class="grid__column-2 grid__offset-4">
+				<input type="submit" value="VERZENDEN">
+			</div>
+		</div>
 
 	</div>
+
+</body>
