--- a/joren.html
+++ b/joren.html
@@ -14,10 +14,10 @@
     <!-- stijlen: let op! watervalsysteem, de volgorde is dus belangrijk -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:400i" rel="stylesheet" type='text/css'>
-    <link rel="stylesheet" media="all" href="styles/vendor/normalize.css" />
-    <link rel="stylesheet" media="all" href="styles/grid.css" />
-    <link rel="stylesheet" media="all" href="styles/nav.css" />
-    <link rel="stylesheet" media="all" href="styles/base.css" />
+    <link rel="stylesheet" media="all" href="css/vendor/normalize.css" />
+    <link rel="stylesheet" media="all" href="css/grid.css" />
+    <link rel="stylesheet" media="all" href="css/nav.css" />
+    <link rel="stylesheet" media="all" href="css/base.css" />
     <link rel="stylesheet" media="all" href="css/font-awesome.css" type='text/css' />
 </head>
 
@@ -48,7 +48,7 @@
     <div class="grid__wrapper">
         <div class="wraplogo_2 wraplogo">
             <h1> JOREN </h1>
-            <img class="logo kleiner_logo" src="img/logo.png" alt="logo">
+            <img class="logo kleiner_logo" src="assets/logo.png" alt="logo">
         </div>
     </div>
 
@@ -58,7 +58,7 @@
 
         <div class="grid__row">
             <div class="grid__column-3 grid__offset-2">
-                <img class="standaard_foto" src="img/joren.png" alt="joren"> </div>
+                <img class="standaard_foto" src="assets/joren.png" alt="joren"> </div>
             <div class="grid__column-2">
                 <h2 class="algemene_gegevens">
                     Naam
