--- a/portfolio.html
+++ b/portfolio.html
@@ -13,10 +13,10 @@
 
 	<!-- stijlen: let op! watervalsysteem, de volgorde is dus belangrijk -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" media="all" href="styles/vendor/normalize.css" />
-	<link rel="stylesheet" media="all" href="styles/grid.css" />
-	<link rel="stylesheet" media="all" href="styles/nav.css" />
-	<link rel="stylesheet" media="all" href="styles/base.css" />
+	<link rel="stylesheet" media="all" href="css/vendor/normalize.css" />
+	<link rel="stylesheet" media="all" href="css/grid.css" />
+	<link rel="stylesheet" media="all" href="css/nav.css" />
+	<link rel="stylesheet" media="all" href="css/base.css" />
 	<link rel="stylesheet" media="all" href="css/font-awesome.css" type='text/css' />
 </head>
 
@@ -48,7 +48,7 @@
 	<div class="grid__wrapper">
 		<div class="wraplogo">
 			<h1> PORTFOLIO </h1>
-			<img class="logo" src="img/logo.png" alt="logo">
+			<img class="logo" src="assets/logo.png" alt="logo">
 		</div>
 	</div>
 
@@ -61,7 +61,7 @@
 					<div class="overlayer">
 						<h4>februari 2017</h4>
 					</div>
-					<img class="standaard_foto" src="img/steekkaarten.png" alt="steekkaarten eureka">
+					<img class="standaard_foto" src="assets/steekkaarten.png" alt="steekkaarten eureka">
 				</div>
 			</div>
 			<div class="grid__column-4">
@@ -69,7 +69,7 @@
 					<div class="overlayer">
 						<h4>maart 2017</h4>
 					</div>
-					<img class="standaard_foto" src="img/vespa.png" alt="technische fischa vespa 125gtr">
+					<img class="standaard_foto" src="assets/vespa.png" alt="technische fischa vespa 125gtr">
 				</div>
 			</div>
 			<div class="grid__column-3">
@@ -77,7 +77,7 @@
 					<div class="overlayer">
 						<h4>januari 2017</h4>
 					</div>
-					<img class="standaard_foto" src="img/cd.png" alt="captured dreams">
+					<img class="standaard_foto" src="assets/cd.png" alt="captured dreams">
 				</div>
 			</div>
 		</div>
@@ -87,7 +87,7 @@
 					<div class="overlayer">
 						<h4>april 2017</h4>
 					</div>
-					<img class="standaard_foto" src="img/kleurlandschap.png" alt="kleurenlandschap aquarel">
+					<img class="standaard_foto" src="assets/kleurlandschap.png" alt="kleurenlandschap aquarel">
 				</div>
 			</div>
 			<div class="grid__column-4">
@@ -95,7 +95,7 @@
 					<div class="overlayer">
 						<h4>april 2017</h4>
 					</div>
-					<img class="standaard_foto" src="img/rhea_macbook.png" alt="youtubekanaal rhea vermei">
+					<img class="standaard_foto" src="assets/rhea_macbook.png" alt="youtubekanaal rhea vermei">
 				</div>
 			</div>
 			<div class="grid__column-3">
@@ -103,7 +103,7 @@
 					<div class="overlayer">
 						<h4>maart 2017</h4>
 					</div>
-					<img class="standaard_foto" src="img/uitnodiging_50.png" alt="Uitnodiging 5O jaar Filip">
+					<img class="standaard_foto" src="assets/uitnodiging_50.png" alt="Uitnodiging 5O jaar Filip">
 				</div>
 			</div>
 		</div>
@@ -113,7 +113,7 @@
 					<div class="overlayer">
 						<h4>april 2017</h4>
 					</div>
-					<img class="standaard_foto" src="img/memory.png" alt="memry spel zeedieren">
+					<img class="standaard_foto" src="assets/memory.png" alt="memry spel zeedieren">
 				</div>
 			</div>
 			<div class="grid__column-4">
@@ -121,7 +121,7 @@
 					<div class="overlayer">
 						<h4>maart 2017</h4>
 					</div>
-					<img class="standaard_foto" src="img/devaddere.png" alt="devaddere boekhouding">
+					<img class="standaard_foto" src="assets/devaddere.png" alt="devaddere boekhouding">
 				</div>
 			</div>
 			<div class="grid__column-3">
@@ -129,7 +129,7 @@
 					<div class="overlayer">
 						<h4>april 2017</h4>
 					</div>
-					<img class="standaard_foto" src="img/z-w_landschap.png" alt="zwart-wit landschap aquarel">
+					<img class="standaard_foto" src="assets/z-w_landschap.png" alt="zwart-wit landschap aquarel">
 				</div>
 			</div>
 		</div>
@@ -139,7 +139,7 @@
 					<div class="overlayer">
 						<h4>maart 2017</h4>
 					</div>
-					<img class="standaard_foto" src="img/elien_jonas.png" alt="kader cadeau">
+					<img class="standaard_foto" src="assets/elien_jonas.png" alt="kader cadeau">
 				</div>
 			</div>
 		</div>
