--- a/team.html
+++ b/team.html
@@ -13,10 +13,10 @@
 
 	<!-- stijlen: let op! watervalsysteem, de volgorde is dus belangrijk -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" media="all" href="styles/vendor/normalize.css" />
-	<link rel="stylesheet" media="all" href="styles/grid.css" />
-	<link rel="stylesheet" media="all" href="styles/nav.css" />
-	<link rel="stylesheet" media="all" href="styles/base.css" />
+	<link rel="stylesheet" media="all" href="css/vendor/normalize.css" />
+	<link rel="stylesheet" media="all" href="css/grid.css" />
+	<link rel="stylesheet" media="all" href="css/nav.css" />
+	<link rel="stylesheet" media="all" href="css/base.css" />
 	<link rel="stylesheet" media="all" href="css/font-awesome.css" type='text/css' />
 </head>
 
@@ -47,7 +47,7 @@
 	<div class="grid__wrapper">
 		<div class="wraplogo">
 			<h1> ONS TEAM </h1>
-			<img class="logo" src="img/logo.png" alt="logo">
+			<img class="logo" src="assets/logo.png" alt="logo">
 		</div>
 	</div>
 
@@ -60,42 +60,42 @@
 
 			<div class="grid__column-3 grid__offset-2">
 				<a href="joren.html">
-					<img class="standaard_foto" src="img/joren.png" alt="joren">
+					<img class="standaard_foto" src="assets/joren.png" alt="joren">
 				</a>
 			</div>
 			<div class="grid__column-1 bovennamen"> Joren </div>
 			<div class="grid__column-1 ondernamen"> Lara </div>
 			<div class="grid__column-3">
 				<a href="lara.html">
-					<img class="standaard_foto" src="img/lara.png" alt="lara">
+					<img class="standaard_foto" src="assets/lara.png" alt="lara">
 				</a>
 			</div>
 		</div>
 		<div class="grid__row">
 			<div class="grid__column-3 grid__offset-2">
 				<a href="bertel.html">
-					<img class="standaard_foto" src="img/bertel.png" alt="bertel">
+					<img class="standaard_foto" src="assets/bertel.png" alt="bertel">
 				</a>
 			</div>
 			<div class="grid__column-1 bovennamen"> Bertel </div>
 			<div class="grid__column-1 ondernamen"> Jamal </div>
 			<div class="grid__column-3">
 				<a href="jamal.html">
-					<img class="standaard_foto" src="img/jamal.png" alt="jamal">
+					<img class="standaard_foto" src="assets/jamal.png" alt="jamal">
 				</a>
 			</div>
 		</div>
 		<div class="grid__row">
 			<div class="grid__column-3 grid__offset-2">
 				<a href="tonia.html">
-					<img class="standaard_foto" src="img/tonia.png" alt="tonia">
+					<img class="standaard_foto" src="assets/tonia.png" alt="tonia">
 				</a>
 			</div>
 			<div class="grid__column-1 bovennamen"> Tonia </div>
 			<div class="grid__column-3 grid__offset-1">
 				<div class="portfolio_wraper">
 					<a href="contact.html">
-						<img class="standaard_foto" src="img/blauw_vlak.png" alt="jamal"> Misschien word jij wel onze nieuwe aanwinst?
+						<img class="standaard_foto" src="assets/blauw_vlak.png" alt="jamal"> Misschien word jij wel onze nieuwe aanwinst?
 					</a>
 				</div>
 			</div>
