--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
 
 	<!-- stijlen: let op! watervalsysteem, de volgorde is dus belangrijk -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" media="all" href="styles/vendor/normalize.css" />
-	<link rel="stylesheet" media="all" href="styles/grid.css" />
-	<link rel="stylesheet" media="all" href="styles/nav.css" />
-	<link rel="stylesheet" media="all" href="styles/base.css" />
+	<link rel="stylesheet" media="all" href="css/vendor/normalize.css" />
+	<link rel="stylesheet" media="all" href="css/grid.css" />
+	<link rel="stylesheet" media="all" href="css/nav.css" />
+	<link rel="stylesheet" media="all" href="css/base.css" />
 </head>
 
 <body class="_grid__development">
@@ -46,7 +46,7 @@
 	<div class="grid__wrapper">
 		<div class="wraplogo">
 			<h1> CONTACT </h1>
-			<img class="logo" src="img/logo.png" alt="logo">
+			<img class="logo" src="assets/logo.png" alt="logo">
 		</div>
 	</div>
 
