--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 	<!-- stijlen: let op! watervalsysteem, de volgorde is dus belangrijk -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" media="all" href="styles/vendor/normalize.css" />
-	<link rel="stylesheet" media="all" href="styles/grid.css" />
-	<link rel="stylesheet" media="all" href="styles/nav.css" />
-	<link rel="stylesheet" media="all" href="styles/base.css" />
+	<link rel="stylesheet" media="all" href="css/vendor/normalize.css" />
+	<link rel="stylesheet" media="all" href="css/grid.css" />
+	<link rel="stylesheet" media="all" href="css/nav.css" />
+	<link rel="stylesheet" media="all" href="css/base.css" />
 	<link rel="stylesheet" media="all" href="css/font-awesome.css" type='text/css' />
 </head>
 
@@ -49,7 +49,7 @@
 	<div class="grid__wrapper">
 		<div class="wrapbanner">
 			<h1> WE ARE THE SAME </h1>
-			<img class="banner" src="img/banner.png" alt="banner">
+			<img class="banner" src="assets/banner.png" alt="banner">
 		</div>
 	</div>
 
@@ -100,7 +100,7 @@
 					verschillen, na een sessie brainstormen komt er altijd een geweldig idee.
 				</div>
 				<div class="grid__column-3">
-					<img class="werkplek" src="img/werkplek.png" alt="werkplek">
+					<img class="werkplek" src="assets/werkplek.png" alt="werkplek">
 				</div>
 			</div>
 
